# Project_Work_TPSIT

./: CMakeLists.txt  README.md
include/: Adattivo.h  AuromaticoAdattivo.h  Automatico.h  Impianto.h  ImpiantoAlpino.h  Manuale.h  Serra.h  Time.h  UserInterface.h
log/: logFile.txt
src/: Adattivo.cpp  Automatico.cpp  Impianto.cpp  Manuale.cpp  Serra.cpp  Time.cpp  UserInterface.cpp  main.cpp
